# abused

./: .gitignore  .pre-commit-config.yaml  README.md  abused.cfg  abused.py  setup.cfg  setup.py
abused/: config.py  emerge.py  emergeOLD.py  outproc.py  output  output.py  package.py  scale.py  squish.py
abused/editor/: base.py  main.py  package.py
abused/gentoo/: config.py  emerge.py
abused/portage/: base.py
