[metadata]
name = abused
version = 0.4.0
description = A Basic USE eDitor is an inline USE flag editor for Gentoo Linux.
author = Mike 'Fuzzy' Partin
author_email = fuzzy@thwap.org
url = https://git.thwap.org/fuzzy/abused
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
scripts =
    bin/abused
    bin/abused_usefix
install_requires =
    PyYAML

[options.package_data]
abused = *.cfg
